--- a/specification/certificateregistration/Microsoft.CertificateRegistration/CertificateRegistration/stable/2015-08-01/AppServiceCertificateOrders.json
+++ b/specification/certificateregistration/Microsoft.CertificateRegistration/CertificateRegistration/stable/2015-08-01/AppServiceCertificateOrders.json
@@ -655,7 +655,7 @@
             "description": "Email address",
             "required": true,
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2016-03-01/CommonDefinitions.json#/definitions/NameIdentifier"
+              "$ref": "../../../CertificateRegistration/stable/2016-03-01/CommonDefinitions.json#/definitions/NameIdentifier"
             }
           },
           {
@@ -892,7 +892,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2016-03-01/CommonDefinitions.json#/definitions/Resource"
+          "$ref": "../../../CertificateRegistration/stable/2016-03-01/CommonDefinitions.json#/definitions/Resource"
         }
       ],
       "properties": {
@@ -1101,7 +1101,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2016-03-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2016-03-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1289,7 +1289,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2016-03-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2016-03-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1305,7 +1305,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2016-03-01/CommonDefinitions.json#/definitions/Resource"
+          "$ref": "../../../CertificateRegistration/stable/2016-03-01/CommonDefinitions.json#/definitions/Resource"
         }
       ],
       "properties": {
@@ -1375,7 +1375,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2016-03-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2016-03-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1401,7 +1401,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2016-03-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2016-03-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1447,7 +1447,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2016-03-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2016-03-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1482,7 +1482,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2016-03-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2016-03-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
