--- a/specification/certificateregistration/Microsoft.CertificateRegistration/CertificateRegistration/stable/2018-02-01/AppServiceCertificateOrders.json
+++ b/specification/certificateregistration/Microsoft.CertificateRegistration/CertificateRegistration/stable/2018-02-01/AppServiceCertificateOrders.json
@@ -41,7 +41,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         },
@@ -111,7 +111,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         },
@@ -156,7 +156,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -211,7 +211,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         },
@@ -301,7 +301,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -343,7 +343,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         },
@@ -395,7 +395,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -457,7 +457,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         },
@@ -561,7 +561,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -709,7 +709,7 @@
             "description": "Email address",
             "required": true,
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/NameIdentifier"
+              "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/NameIdentifier"
             }
           },
           {
@@ -771,7 +771,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -849,7 +849,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -894,7 +894,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -964,7 +964,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/Resource"
+          "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/Resource"
         }
       ],
       "properties": {
@@ -1173,7 +1173,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1361,7 +1361,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1377,7 +1377,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/Resource"
+          "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/Resource"
         }
       ],
       "properties": {
@@ -1447,7 +1447,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1473,7 +1473,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1521,7 +1521,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1556,7 +1556,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2018-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2018-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
