--- a/specification/certificateregistration/Microsoft.CertificateRegistration/CertificateRegistration/stable/2020-10-01/AppServiceCertificateOrders.json
+++ b/specification/certificateregistration/Microsoft.CertificateRegistration/CertificateRegistration/stable/2020-10-01/AppServiceCertificateOrders.json
@@ -41,7 +41,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         },
@@ -82,7 +82,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -117,7 +117,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         },
@@ -162,7 +162,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -217,7 +217,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         },
@@ -258,7 +258,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -313,7 +313,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -355,7 +355,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         },
@@ -407,7 +407,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -469,7 +469,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         },
@@ -517,7 +517,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -579,7 +579,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -627,7 +627,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -675,7 +675,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -714,7 +714,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -745,7 +745,7 @@
             "description": "Email address",
             "required": true,
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/NameIdentifier"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/NameIdentifier"
             }
           },
           {
@@ -762,7 +762,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -813,7 +813,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -852,7 +852,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -897,7 +897,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -942,7 +942,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -1012,7 +1012,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/Resource"
+          "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/Resource"
         }
       ],
       "properties": {
@@ -1221,7 +1221,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1409,7 +1409,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1425,7 +1425,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/Resource"
+          "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/Resource"
         }
       ],
       "properties": {
@@ -1495,7 +1495,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1521,7 +1521,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1569,7 +1569,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1604,7 +1604,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2020-10-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2020-10-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
