--- a/specification/certificateregistration/Microsoft.CertificateRegistration/CertificateRegistration/stable/2021-02-01/AppServiceCertificateOrders.json
+++ b/specification/certificateregistration/Microsoft.CertificateRegistration/CertificateRegistration/stable/2021-02-01/AppServiceCertificateOrders.json
@@ -41,7 +41,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         },
@@ -82,7 +82,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -117,7 +117,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         },
@@ -162,7 +162,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -217,7 +217,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         },
@@ -258,7 +258,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -307,7 +307,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -349,7 +349,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         },
@@ -401,7 +401,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -463,7 +463,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         },
@@ -511,7 +511,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -567,7 +567,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -615,7 +615,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -663,7 +663,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -702,7 +702,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -733,7 +733,7 @@
             "description": "Email address",
             "required": true,
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/NameIdentifier"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/NameIdentifier"
             }
           },
           {
@@ -750,7 +750,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -801,7 +801,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -840,7 +840,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -885,7 +885,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -930,7 +930,7 @@
           "default": {
             "description": "App Service error response.",
             "schema": {
-              "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
+              "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/DefaultErrorResponse"
             }
           }
         }
@@ -1000,7 +1000,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/Resource"
+          "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/Resource"
         }
       ],
       "properties": {
@@ -1213,7 +1213,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1405,7 +1405,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1421,7 +1421,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/Resource"
+          "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/Resource"
         }
       ],
       "properties": {
@@ -1491,7 +1491,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1518,7 +1518,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1584,7 +1584,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
@@ -1620,7 +1620,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../Microsoft.Web/stable/2021-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../CertificateRegistration/stable/2021-02-01/CommonDefinitions.json#/definitions/ProxyOnlyResource"
         }
       ],
       "properties": {
