update tspconfig after folder structure change

--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/AppConfiguration/tspconfig.yaml
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/AppConfiguration/tspconfig.yaml
@@ -14,6 +14,7 @@ options:
     output-file: "{version-status}/{version}/appconfiguration.json"
     emit-lro-options: "all"
     examples-dir: "{project-root}/examples"
+    arm-types-dir: "{project-root}/../../../../common-types/resource-management"
     arm-resource-flattening: true
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-appconfiguration"
