--- a/specification/trafficmanager/TrafficManager.Management/tspconfig.yaml
+++ b/specification/trafficmanager/TrafficManager.Management/tspconfig.yaml
@@ -38,14 +38,17 @@ options:
       name: "@azure/arm-trafficmanager"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/trafficmanager"
-    package-dir: "armtrafficmanager"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armtrafficmanager"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armtrafficmanager"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
     generate-fakes: true
     head-as-boolean: true
     inject-spans: true
+  "@azure-typespec/http-client-csharp-mgmt":
+    package-name: "Azure.ResourceManager.TrafficManager"
+    namespace: "{package-name}"
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
