fix final result for delete lro

--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/AppConfiguration/preview/2025-02-01-preview/appconfiguration.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/AppConfiguration/preview/2025-02-01-preview/appconfiguration.json
@@ -736,8 +736,7 @@
           }
         },
         "x-ms-long-running-operation-options": {
-          "final-state-via": "location",
-          "final-state-schema": "#/definitions/ConfigurationStore"
+          "final-state-via": "location"
         },
         "x-ms-long-running-operation": true
       }
