--- a/specification/containerservice/NodeCustomization.Management/tspconfig.yaml
+++ b/specification/containerservice/NodeCustomization.Management/tspconfig.yaml
@@ -13,11 +13,10 @@ options:
     examples-dir: "{project-root}/examples"
     use-read-only-status-schema: true
   "@azure-tools/typespec-csharp":
+    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
     flavor: azure
-    package-dir: "Azure.ResourceManager.Contoso"
     clear-output-folder: true
-    model-namespace: true
-    namespace: "{package-dir}"
+    namespace: "Azure.ResourceManager.ContainerServiceNodeCustomization"
   "@azure-tools/typespec-java":
     package-dir: "azure-resourcemanager-containerservice-nodecustom"
     namespace: "com.azure.resourcemanager.containerservice.nodecustom"
@@ -33,6 +32,13 @@ options:
     generate-fakes: true
     head-as-boolean: true
     inject-spans: true
+  "@azure-tools/typespec-python":
+    package-dir: "azure-mgmt-containerservicenodecustomization"
+    flavor: "azure"
+    namespace: "azure.mgmt.containerservicenodecustomization"
+    service-dir: "sdk/containerservice"
+    generate-test: true
+    generate-sample: true
   "@azure-tools/typespec-ts":
     service-dir: "sdk/containerservice"
     flavor: azure
