--- a/specification/eventhub/Eventhub.Management/tspconfig.yaml
+++ b/specification/eventhub/Eventhub.Management/tspconfig.yaml
@@ -38,7 +38,7 @@ options:
       name: "@azure/arm-eventhub"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/eventhub"
-    package-dir: "armeventhub"
+    emitter-output-dir: "{output-dir}/{service-dir}/armeventhub"
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
     fix-const-stuttering: true
     flavor: "azure"
