--- a/specification/automanage/AutoManage.Management/tspconfig.yaml
+++ b/specification/automanage/AutoManage.Management/tspconfig.yaml
@@ -38,7 +38,7 @@ options:
       name: "@azure/arm-automanage"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/automanage"
-    package-dir: "armautomanage"
+    emitter-output-dir: "{output-dir}/{service-dir}/armautomanage"
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
     fix-const-stuttering: true
     flavor: "azure"
