--- a/specification/quota/Quota.Management/tspconfig.yaml
+++ b/specification/quota/Quota.Management/tspconfig.yaml
@@ -39,8 +39,8 @@ options:
       name: "@azure/arm-quota"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/quota"
-    package-dir: "armquota"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armquota"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armquota"
     fix-const-stuttering: false
     flavor: "azure"
     generate-samples: true
