--- a/specification/servicebus/ServiceBus.Management/tspconfig.yaml
+++ b/specification/servicebus/ServiceBus.Management/tspconfig.yaml
@@ -30,8 +30,8 @@ options:
       name: "@azure/arm-servicebus"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/servicebus"
-    package-dir: "armservicebus"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armservicebus"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armservicebus"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
