--- a/specification/consumption/Consumption.Management/tspconfig.yaml
+++ b/specification/consumption/Consumption.Management/tspconfig.yaml
@@ -30,8 +30,8 @@ options:
       name: "@azure/arm-consumption"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/consumption"
-    package-dir: "armconsumption"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armconsumption"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armconsumption"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
